# consult

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml  deploy-sites.yml  deploy.yml  validate.yml
ansible/: ansible.cfg  requirements.yml
ansible/inventory/: dev.yml  prod.yml
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: deploy.yml  setup.yml
apps/web/: .gitkeep  Dockerfile  conftest.py  manage.py
apps/web/config/: settings.py  urls.py  wsgi.py
apps/web/core/: __init__.py  admin.py  apps.py  decorators.py  managers.py  middleware.py  models.py
apps/web/crm/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/web/dashboard/: apps.py  urls.py  views.py
apps/web/inbox/: __init__.py  admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/web/integrations/: admin.py  apps.py  models.py  urls.py  views.py
apps/web/payments/: __init__.py  services.py  urls.py  webhooks.py
apps/web/pos/: __init__.py  admin.py  apps.py  exceptions.py  models.py  tasks.py
apps/web/restaurant/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
baml_src/: classification.baml  clients.baml
dagger/: dagger.json  pyproject.toml
dagger/src/consult_pipeline/: __init__.py  main.py
docker/: django.Dockerfile  worker.Dockerfile
docs/: deployment.md
docs/active/: ROADMAP.md
docs/active/enhancement_proposals/: EP-001-backend-foundation.md  EP-002-inbox-processing.md  EP-003-communications.md  EP-004-integrations.md  EP-005-client-sites.md  EP-006-automated-deploy-validation.md  EP-007-pulumi-infrastructure.md  EP-008-restaurant-pos-integration.md  EP-009-ansible-deployment.md  EP-010-doppler-ci-config.md  EP-011-agent-deployable-infrastructure.md  _TEMPLATE.md
docs/active/tickets/: 001-A-django-bootstrap.md  001-B-intake-worker.md  001-C-coffee-shop-site.md  002-A-submission-processing.md  002-B-baml-classification.md  002-C-dashboard-shell.md  002-D-inbox-list.md  002-E-message-detail.md  002-F-contact-profile.md  003-A-sms-webhook.md  003-B-voicemail-handling.md  003-C-twilio-signature.md  003-D-outbound-sms.md  003-E-outbound-email.md  003-F-reply-channel-logic.md  004-A-calcom-embed.md  004-B-calcom-webhook.md  004-C-jobber-oauth.md  004-D-jobber-webhook.md  004-E-integration-settings.md  005-A-scaffolding-script.md  005-B-coffee-shop.md  005-C-hauler.md  005-D-cleaning.md  005-E-landscaper.md  005-F-template-hardening.md  005-G-barber.md  005-G-data-analytics.md  005-H-data-analytics.md  005-I-local-agency.md  005-I-web-dev.md  005-J-cicd-pipeline.md  005-J-local-agency.md  005-K-cicd-pipeline.md  006-A-dagger-pipeline-setup.md  006-B-predeploy-validation-flow.md  006-C-github-actions-integration.md  007-A-pulumi-project-setup.md  007-B-cloudflare-infrastructure.md  007-C-hetzner-django-infrastructure.md  (+25 more)
docs/archive/enhancement_proposals/: EP-002-inbox-processing.md  EP-003-communications.md  EP-009-ansible-deployment.md
docs/archive/tickets/: 003-A-sms-webhook.md  003-B-voicemail-handling.md  003-C-twilio-signature.md  003-D-outbound-sms.md  003-E-outbound-email.md  003-F-reply-channel-logic.md  004-A-calcom-embed.md  004-D-jobber-webhook.md  004-E-integration-settings.md  009-A-local-docker-setup.md  009-B-ansible-base-playbook.md  009-C-django-deploy-playbook.md  011-A-ssh-key-retrieval.md  011-B-non-interactive-commands.md  011-C-structured-error-output.md
docs/knowledge/patterns/: htmx-django.md  multi-tenancy.md  neon-doppler-setup.md  submission-queue.md
docs/knowledge/playbook/: blocked-ticket.md  complete-ticket.md  continue-ticket.md  debug-issue.md  infrastructure-setup.md  (+3 more)
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  requirements.txt
infra/src/: __init__.py  outputs.py
scripts/: .gitkeep  new-site.sh  test_intake.py
sites/: .gitkeep  registry.yaml
sites/_template/: README.md  astro.config.mjs  package.json  tailwind.config.ts  wrangler.toml
sites/_template-restaurant/: astro.config.mjs  package.json  vitest.config.ts  wrangler.toml
sites/barber/: package.json  tailwind.config.ts  wrangler.toml
sites/cleaning/: package.json  tailwind.config.ts  wrangler.toml
sites/coffee-shop/: astro.config.mjs  package.json  tailwind.config.ts  wrangler.toml
sites/data-analytics/: astro.config.mjs  package.json  tailwind.config.ts  wrangler.toml
sites/hauler/: package.json  tailwind.config.ts  wrangler.toml
sites/katies-sushi/: package.json  tailwind.config.ts  wrangler.toml
sites/landscaper/: package.json  tailwind.config.ts  wrangler.toml
sites/local-agency/: package.json  tailwind.config.ts  wrangler.toml
sites/webstudio/: package.json  tailwind.config.ts  wrangler.toml
workers/: .gitkeep
workers/intake/: package.json  tsconfig.json  wrangler.toml
(+170 files in other folders)
